<resources>
    <string name="app_name">UTS Salman</string>
    <string name="putih">Putih</string>
    <string name="hitam">Hitam</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="home">Home</string>
    <string name="calculator">Calculator</string>
    <string name="hitung_luas_persegi_panjang">Hitung Luas Persegi Panjang</string>
    <string name="panjang">Panjang</string>
    <string name="lebar">Lebar</string>
    <string name="hitung">Hitung</string>
    <string name="reset">Reset</string>
</resources>