<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="316dp"
            android:background="#6200ED"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_black"
                android:text="@string/hitung_luas_persegi_panjang"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="italic" />

            <!-- Width input field -->
            <EditText
                android:id="@+id/editTextLength"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:hint="@string/panjang"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/editTextWidth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:hint="@string/lebar"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                tools:ignore="VisualLintTextFieldSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp">

                <Button
                    android:id="@+id/calculate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_black"
                    android:text="@string/hitung"
                    tools:ignore="ButtonStyle,VisualLintButtonSize" />

                <Button
                    android:id="@+id/reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_black"
                    android:text="@string/reset"
                    tools:ignore="ButtonStyle,VisualLintButtonSize" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_black"
                    android:textAlignment="center"
                    android:textSize="34sp"
                    android:textStyle="italic" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_navigation_menu"
        tools:ignore="VisualLintBottomNav" />

</androidx.constraintlayout.widget.ConstraintLayout>