<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="216dp"
        android:background="#6200ED"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:contentPadding="10dp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_black"
                android:text="@string/putih"
                android:textStyle="italic"
                android:visibility="invisible" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#000000"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:contentPadding="10dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_black"
                android:text="@string/hitam"
                android:textColor="#E4E4E4"
                android:textStyle="italic"
                android:visibility="invisible" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#000000"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:contentPadding="10dp"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_black"
                android:text="@string/hitam"
                android:textColor="#E4E4E4"
                android:textStyle="italic"
                android:visibility="invisible" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/showButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_black"
                android:text="@string/show"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/hideButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fadingEdge="horizontal|vertical"
                android:fontFamily="@font/poppins_black"
                android:text="@string/hide"
                tools:ignore="VisualLintButtonSize,TouchTargetSizeCheck" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:contentPadding="10dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_black"
                android:text="@string/putih"
                android:textStyle="italic"
                android:visibility="invisible" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:contentPadding="10dp"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_black"
                android:text="@string/putih"
                android:textStyle="italic"
                android:visibility="invisible" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#000000"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:contentPadding="10dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_black"
                android:text="@string/hitam"
                android:textColor="#E4E4E4"
                android:textStyle="italic"
                android:visibility="invisible" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_navigation_menu"
        tools:ignore="VisualLintBottomNav" />

</LinearLayout>